# world-model-mcp-verifier

./: .gitignore  LICENSE  README.md
python/: pyproject.toml
python/src/world_model_verifier/: __init__.py  canonical.py  hybrid.py  merkle.py  verifier.py
python/tests/: test_verifier.py
scripts/: generate_vectors.py
typescript/: package.json
typescript/src/: canonical.ts  hybrid.ts  index.ts  merkle.ts  verifier.ts
typescript/tests/: verifier.test.ts
vectors/: canonical.json  inclusion-bundle.json  merkle.json
